Adding more contect to my web page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <h1>Welcome To My Webpage</h1>    
 
     <p>Hello, World!</p>
-    <h2>
-        <p>Hello, World!</p>
-    </h2>
-    <p>Hello, World!</p>
+    <p>This is my first page using git hub repositories</p>
+    <h2>My learning story</h2>
+    <p>It has been a very hard and fun journal. Since, I started 4 years ago. to be continuiun</p>
     <p>Hello, World!</p>
     <p>Hello, World!</p>
 </body>
