Add style to body tap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
-   
+   <style>
+        body {
+            color: blue;
+        }
+   </style>
 </head>
 <body style="background-color: azure;"> 
     <h1>Welcome To My Webpage</h1>    
