class body and adding style to body text

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
    <style>
-        body {
+        .colord {
             color: blue;
         }
    </style>
 </head>
-<body style="background-color: azure;"> 
+<body class="colord"> 
     <h1>Welcome To My Webpage</h1>    
 
     <p>Hello, World!</p>
